# libyuv-aar

./: .gitmodules  README.md  build.gradle  jitpack.yml  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  demo.cpp
app/src/main/java/com/homesoft/libyuv/: Demo.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
yuv/: build.gradle
yuv/src/main/cpp/: CMakeLists.txt
